Wed Aug  6 07:45:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ZIOP/ZIOP.cpp:
        * tao/ZIOP/ZIOP.pidl:
        * tao/ZIOP/ZIOP_Policy_i.cpp:
        * tao/ZIOP/ZIOP_Policy_i.h:
        * tao/ZIOP/ZIOP_PolicyFactory.cpp:
        * tao/Compression/Base_Compressor.cpp:
        * tao/Compression/Base_Compressor.h:
        * tao/Compression/Compression.pidl:
          CompressionRatio could get negative, so make it a regular long.
          Added a new typedef for the ratio and uses this. Thanks to IONA
          for pointing out that the ratio could get negative.

        * tao/Messaging/Asynch_Reply_Dispatcher.cpp:
          Use ACE_TEXT

        * tao/Strategies/UIOP_Connection_Handler.cpp:
          Const and layout changes

        * tao/Valuetype/ValueBase.h:
          Changed Value_tag_sigbits to 0x7fffff00L to resolve warnings
          with gcc 4.3

Tue Aug  5 07:51:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/nslist/nsdel.cpp:
          Fixed gcc4.3 warning

Tue Aug  5 06:44:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/tao_idl.1:
          Removed -Ge which has been removed a long time ago

Mon Aug 04 14:40:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO/tests/POA/Adapter_Activator/server.cpp:
        * TAO/tests/Portable_Interceptors/AdvSlot/client.cpp:
        * TAO/tests/Portable_Interceptors/AdvSlotDblCpy/client.cpp:
        * TAO/tests/Portable_Interceptors/AdvSlotExt/client.cpp:
        * TAO/tests/Portable_Interceptors/Bug_2133/client.cpp:

          Minor wide character conversions misses from previous commits.

Mon Aug 04 14:25:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO/tests/POA/EndpointPolicy/server.cpp:
        * TAO/tests/POA/Default_Servant2/client.cpp:

          Minor wide character conversions misses from previous commit.

Fri Aug  1 17:56:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
